--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -91,7 +91,7 @@
 
 .headerCenter {
     font-family: 'Playfair Display', serif;
-    color: #780307;
+    color:beige;
     font-size: 60px;
     text-align: center;
     position: relative;
@@ -217,7 +217,7 @@ footer p
 {
     font-family:'Playfair Display', serif;
     text-align: center;
-    color: aliceblue;
+    color: beige;
 }
 
 .Intro-Body
